[package]
name = "imageBot"
version = "0.1.0"
authors = ["sydney"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
reqwest = "0.9.19"
regex = "1.2.1"
lazy_static = "1.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3